Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19519

mysql_install_db.exe doesn't set password_last_changed for newly created password

    XMLWordPrintable

Details

    Description

      Same as MDEV-19516, but for Windows installer: it also asks for root password and sets it, but doesn't set password_last_changed, which means the user will be later forced to change the password again, when/if default_password_lifetime is configured.

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.