MDEV-19519 mysql_install_db.exe doesn't set password_last_changed for newly created password